# hydromt

./: .actrc  .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  .yamlfmt  .zenodo.json  3dfm_catalog.yml  3dfm_catalog_v1.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  changelog.html  config.yaml  debug.py  diff_latest_release.sh  env_stress_test.sh  environment.yml  example model usage.md  fan_curve  finish-release.yml  genindex.html  hydromt-core-sbom.json  hydromt-sbom.json  index.html  make_env.py  min-environment.yml  model attributes.md  note.txt  notes.txt  objects.inv  open-vscode.bat  paper.bib  paper.md  (+15 more)
.binder/: Dockerfile
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
_examples/: README.html  delineate_basin.html  doing_extreme_value_analysis.html  export_data.html  prep_data_catalog.html  reading_point_data.html  reading_raster_data.html  reading_tabular_data.html  reading_vector_data.html  reading_vector_data.ipynb  working_with_flow_directions.html  working_with_flow_directions.ipynb  working_with_geodatasets.html  working_with_geodatasets.ipynb  working_with_meshcomponent.html  working_with_meshcomponent.ipynb  working_with_models.html  working_with_models.ipynb  working_with_models_basics.html  working_with_models_basics.ipynb  working_with_raster.html  working_with_tiled_raster_data.html  working_with_tiled_raster_data.ipynb
_generated/: artifact_data.html  aws_data.html  deltares_data.html  gcs_cmip6_data.html  hydromt.data_catalog.DataCatalog.add_source.html  hydromt.data_catalog.DataCatalog.export_data.html  hydromt.data_catalog.DataCatalog.from_dict.html  hydromt.data_catalog.DataCatalog.from_predefined_catalogs.html  hydromt.data_catalog.DataCatalog.from_yml.html  hydromt.data_catalog.DataCatalog.get_dataframe.html  hydromt.data_catalog.DataCatalog.get_dataset.html  hydromt.data_catalog.DataCatalog.get_geodataframe.html  hydromt.data_catalog.DataCatalog.get_geodataset.html  hydromt.data_catalog.DataCatalog.get_rasterdataset.html  hydromt.data_catalog.DataCatalog.get_source.html  hydromt.data_catalog.DataCatalog.get_source_bbox.html  hydromt.data_catalog.DataCatalog.get_source_time_range.html  hydromt.data_catalog.DataCatalog.html  hydromt.data_catalog.DataCatalog.predefined_catalogs.html  hydromt.data_catalog.DataCatalog.sources.html  hydromt.data_catalog.DataCatalog.to_dict.html  hydromt.data_catalog.DataCatalog.to_yml.html  hydromt.data_catalog.DataCatalog.update.html  hydromt.data_catalog.PredefinedCatalog.get_catalog_file.html  hydromt.data_catalog.PredefinedCatalog.html  hydromt.data_catalog.adapters.DataFrameAdapter.html  hydromt.data_catalog.adapters.DataFrameAdapter.transform.html  hydromt.data_catalog.adapters.DatasetAdapter.html  hydromt.data_catalog.adapters.DatasetAdapter.transform.html  hydromt.data_catalog.adapters.GeoDataFrameAdapter.html  hydromt.data_catalog.adapters.GeoDataFrameAdapter.transform.html  hydromt.data_catalog.adapters.GeoDatasetAdapter.html  hydromt.data_catalog.adapters.GeoDatasetAdapter.transform.html  hydromt.data_catalog.adapters.RasterDatasetAdapter.html  hydromt.data_catalog.adapters.RasterDatasetAdapter.transform.html  hydromt.data_catalog.adapters.data_adapter_base.DataAdapterBase.html  hydromt.data_catalog.drivers.BaseDriver.html  hydromt.data_catalog.drivers.DataFrameDriver.html  hydromt.data_catalog.drivers.DataFrameDriver.read.html  hydromt.data_catalog.drivers.DataFrameDriver.write.html  (+401 more)
_modules/: index.html
_static/: switcher.json
api/: api.html  cli.html  data_adapter.html  data_catalog.html  data_source.html  drivers.html  gis.html  model.html  plugin.html  stats.html  uri_resolvers.html  utils.html
binder/: environment.yml  postBuild
data/: predefined_catalogs.yml
dev/: api.html  changelog.html  genindex.html  index.html  objects.inv  plugins.html  search.html  searchindex.js
docs/: Makefile  RELEASE_PROCESS.md  api.rst  changelog.rst  clean.py  conf.py  contributing.rst  dev_guide.rst  faq.rst  getting_started.rst  index.rst  installation.rst  intro.rst  make.bat  parse_predefined_catalogs.py  plugins.rst  quick_overview.rst  user_guide.rst  user_stories.rst  why_hydromt.rst
environments/: hydromt-dev.yml
envs/: docker-requirements.txt  hydromt-dev.yml  hydromt-min.yml  hydromt-test.yml
examples/: README.rst  delineate_basin.ipynb  doing_extreme_value_analysis.ipynb  environment.yml  export_data.ipynb  grid_model_build.ini  grid_model_build.yaml  prep_data_catalog.ipynb  read_raster_data.ipynb  reading_point_data.ipynb  reading_raster_data.ipynb  reading_tabular_data.ipynb  reading_vector_data.ipynb  tiling_raster_data.ipynb  try_geodataset.ipynb  workflow_yml.ipynb  working_with_flow_directions.ipynb  working_with_geodatasets.ipynb  working_with_meshcomponent.ipynb  working_with_meshmodel.ipynb  working_with_models.ipynb  working_with_models_basics.ipynb  working_with_raster.ipynb  working_with_tiled_raster_data.ipynb
guides/: intro.html
hydromt/: __init__.py  _abstract_base.py  _compat.py  _io.py  abstract_base.py  api.py  cf_utils.py  cf_xml_utils_extended.py  config.py  data_adapter.py  data_catalog.py  error.py  exceptions.py  flw.py  geo.py  geodataset.py  gis_utils.py  hydromt_step.py  insecure.py  io.py  log.py  merge.py  new_feature.py  nodata.py  parsers.py  plugins.py  predefined_catalog.py  predefined_catalogs.py  raster.py  readers.py  rio.py  root.py  stats.py  typing.py  utils.py  vector.py  vector_utils.py  writers.py  xml_utils.py
joss_paper/: citation.bib  paper.bib  paper.md
overview/: examples_index.html  faq.html  intro.html  publications.html  quick_overview.html  team.html  use_case_examples.html
scripts/: migrate_catalog_to_v1.py
tests/: conftest.py  test_api.py  test_basin_mask.py  test_cli.py  test_config.py  test_data_adapter.py  test_data_catalog.py  test_data_catalog_v1.py  test_extremes.py  test_flw.py  test_forcing.py  test_geo.py  test_geodataset.py  test_gis_utils.py  test_hydromt_step.py  test_io.py  (+21 more)
(+10314 files in other folders)
