[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt"
authors = [
	{ name = "Dirk Eilander", email = "dirk.eilander@deltares.nl" },
	{ name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl" },
	{ name = "Sam Vente", email = "sam.vente@deltares.nl" },
]
dependencies = [
	"affine>=2.4",             # Spatial rasterers affine transformations (bbox pixel coalision)
	"bottleneck>=1.4",         # Spearmen rank computation
	"click>=8.2",              # CLI configuration
	"dask>=2024",              # lazy computing
	"fsspec[http]>=2025",      # general file systems utilities
	"geopandas[all]>=1.0",     # pandas but geo, wraps fiona and shapely
	"importlib_metadata>=8.0", # entrypoints backport
	"mercantile>=1.0",         # tile handling
	"netcdf4>=1.7",            # netcfd IO
	"numba>=0.59.0",           # speed up computations (used in e.g. stats)
	"numpy>=2.0",              # pin necessary to ensure compatability with C headers
	"packaging>=25.0",         # compare versions of hydromt
	"pandas>=2.3,<4",          # Dataframes
	"pooch>=1.8",              # data fetching
	"pyarrow>=17.0",           # Apache Arrow bindings
	"pydantic>=2.11",          # Validation
	"pydantic-settings>=2.8",  # Settings Management
	"pyflwdir>=0.5.10",        # Height models and derivatives
	"pyogrio>=0.10",           # io for geopandas dataframes
	"pyproj>=3.7",             # projections for Coordinate reference systems
	"pystac>=1.11",            # STAC integration
	"pyyaml>=6.0.2",           # yaml interface (6.0.2 adds py3.13 wheels, older builds fail)
	"rasterio>=1.4",           # raster wrapper around gdal
	"requests>=2.32.2",        # donwload stuff
	"rioxarray>=0.18",         # wraps rasterio and xarray. Almost superceded by hydromt/raster.py
	"scipy>=1.14",             # scientific utilities
	"shapely>=2.1.2",          # geometry transforms
	"tomli>=2.0",              # parsing toml files
	"tomli-w>=1.0",            # writing toml files
	"universal_pathlib>=0.2",  # provides path compatability between different filesystems
	"xarray>=2025.06",         # ndim data arrays
	"xmltodict>=1.0",          # xml parser also used to read VRT
	"xugrid>=0.15.1",          # xarray wrapper for mesh processing
	"zarr>=3.1,<4",            # zarr
]

requires-python = ">=3.11,<3.15"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Hydrology",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
io = [
	"azure-ai-ml>=1.22",    # AzureML datastore URI resolution
	"azure-identity>=1.16", # Azure credential chain (DefaultAzureCredential)
	"adlfs>=2024",          # Azure Data Lake / Blob Storage file system
	"gcsfs>=2023.12.1",     # google cloud file system
	"fastparquet>=2024",    # parquet IO
	"openpyxl>=3.1",        # excel IO
	"pillow>=11.0",         # image IO
	"s3fs>=2024",           # S3 file system
]
vrt = [
	"gdal>=3.5.0", # vrt for caching of mosaic raster
]
extra = [
	"matplotlib>=3.0", # plotting; required for slippy tiles
	"pyet>=1.3",       # calc evapotranspiration, quite well used, used in all wflow models but domain specific
]
dev = [
	"flit>=3.10",             # needed to publish to pypi
	"mypy>=2",                # static type checking
	"pandas-stubs>=2.3",      # type hints for pandas
	"pre-commit>=4.0",        # linting
	"ruff>=0.15",             # linting
	"python-dotenv>=1.0",     # find and load .env file
	"twine>=6.0",             # needed to publish to pypi
	"types-openpyxl>=3.0",    # type hints for openpyxl
	"types-PyYAML>=6.0",      # type hints for pyyaml
	"types-Pillow>=10.0",     # type hints for pillow
	"types-requests>=2.32.2", # type hints for requests
	"types-xmltodict>=1.0",   # type hints for xmltodict
]
test = [
	"pytest>=9.0.3",       # testing framework
	"pytest-cov>=6.0",     # test coverage
	"pytest-mock>=3.13",   # mocking
	"pytest-timeout>=2.4", # darn hanging tests
]
doc = [
	"hydromt[examples,extra]",            # examples are included in the docs
	"nbsphinx>=0.9",                      # build notebooks in docs
	"pydata-sphinx-theme>=0.17.0",        # theme
	"sphinx_autosummary_accessors>=2025", # doc layout
	"sphinx>=8,<9",                       # build docs, v9 is not compatible with sphinx_autosummary_accessors: https://github.com/xarray-contrib/sphinx-autosummary-accessors/issues/165
	"sphinx_design>=0.6",                 # doc layout
	"sphinx-click>=6.0",                  # click integration
	"sbom4python>=0.12",                  # generate software bill of materials
	"autodoc_pydantic>=2.0",              # pydantic autodoc
]
examples = [
	"cartopy>=0.23",   # plotting examples
	"jupyterlab>=4.3", # run examples in jupyter notebook
	"notebook>=7.4",   # jupyter integration
]
slim = ["hydromt[io,extra,examples]"]

[project.urls]
Documentation = "https://deltares.github.io/hydromt"
Source = "https://github.com/Deltares/hydromt"

[project.scripts]
hydromt = "hydromt.cli.main:main"

[project.entry-points."hydromt.components"]
core = "hydromt.model.components"

[project.entry-points."hydromt.drivers"]
core = "hydromt.data_catalog.drivers"

[project.entry-points."hydromt.models"]
core = "hydromt.model"

[project.entry-points."hydromt.catalogs"]
core = "hydromt.data_catalog.predefined_catalog"

[project.entry-points."hydromt.uri_resolvers"]
core = "hydromt.data_catalog.uri_resolvers"

[tool.setuptools.dynamic]
description = { file = "hydromt/__init__.py" }

[tool.ruff]
line-length = 88
target-version = "py311"                        # keep as the lowest for backwards compatible changes.
exclude = ["docs", "hydromt/model/__init__.py"]

[tool.ruff.lint]
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
select = ["E", "F", "I", "PT", "D", "B", "ICN", "TID"]
ignore = ["D211", "D213", "D206", "E501", "E741", "D105", "E712", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"hydromt/__init__.py" = ["E402", "F401", "F403"]
"hydromt/models/__init__.py" = ["F401"]
"hydromt/_compat.py" = ["F401"]
"tests/conftest.py" = ["E402"]
"examples/**" = ["B018", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["hydromt"]
exclude = ["docs", "examples", "envs", "tests", "binder", ".github"]

[tool.pytest.ini_options]
addopts = ["--ff", "-m", "not manual"]
testpaths = ["tests"]
markers = [
	"integration: marks tests as being integration tests",
	"manual: marks tests as manual, to be run before release",
]

filterwarnings = [
	"error",
	"ignore:numpy.ndarray size changed:RuntimeWarning",
	# "ignore::rasterio.errors.NotGeoreferencedWarning",                              # upstream issue with rasterio, see https://github.com/rasterio/rasterio/issues/2497
	"ignore:Detected a customized `__new__` method in subclass:DeprecationWarning", #upstream error in universal_pathlib see https://github.com/fsspec/universal_pathlib?tab=readme-ov-file#migrating-to-v020
	"ignore::ResourceWarning",                                                      # upstream issue with aoihttp, can remove once aoihttp 4.0 is stable: https://github.com/aio-libs/aiohttp/issues/5426
	"ignore::pytest.PytestUnraisableExceptionWarning",                              # combine with the above: https://github.com/pytest-dev/pytest/issues/9825
	'ignore:pathlib\.Path\.__enter__:DeprecationWarning',                           # xugrid in python 3.11
	#   "ignore:Implicit None on return values is deprecated and will raise KeyErrors:DeprecationWarning"
	"ignore:__array_wrap__ must accept context and return_scalar arguments \\(positionally\\) in the future:DeprecationWarning",
	'ignore:Python 3.14 will, by default, filter extracted tar archives:DeprecationWarning',                                     # pooch tarfile in python 3.12
	"ignore:'mode' parameter is deprecated and will be removed in Pillow 13:DeprecationWarning",                                 # Pillow 13

	# numpy itself silences these
	# https://github.com/numpy/numpy/blob/46268caa719db95ab2198bcd619f0e3120d7c52e/numpy/__init__.py#L704-L707
	"ignore:numpy.ndarray size changed:RuntimeWarning",

	# zarr v3 experimental warning
	"ignore:Consolidated metadata is currently not part in the Zarr format 3 specification:UserWarning",
	# irrelevant radolan engine warning
	"ignore:Engine 'radolan' loading failed.*:RuntimeWarning",

	# macos specific, see https://github.com/shapely/shapely/issues/2215
	"ignore:divide by zero encountered in oriented_envelope:RuntimeWarning:shapely",
	"ignore:invalid value encountered in oriented_envelope:RuntimeWarning:shapely",
]

[tool.mypy]
# TODO: Re-enable the tests
exclude = ["docs/.*", "tests/.*"]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
python_version = "3.14"
ignore_missing_imports = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.pypi-dependencies]
hydromt = { path = ".", editable = true }

[tool.pixi.feature.doc.dependencies]
pandoc = "*"

[tool.pixi.feature.vrt.dependencies]
gdal = ">=3.5.0"

[tool.pixi.feature.lowest-deps]
solve-strategy = "lowest-direct"

# Conda-side constraints to match the lower bounds declared in [project.dependencies].
# Without these, lowest-direct can resolve packages below the PyPI floor if another dependency also uses it.
[tool.pixi.feature.lowest-deps.dependencies]
numpy = ">=2.0"
cartopy = ">=0.23"
shapely = ">=2.1.2"

[tool.pixi.feature.lowest-deps.pypi-options]
no-build = true

[tool.pixi.feature.lowest-deps.tasks]
test = { cmd = ["pytest", "-W", "default"] }

[tool.pixi.feature.doc.tasks]
doctest = { cmd = [
	"sphinx-build",
	"-M",
	"doctest",
	"docs",
	"docs/_build",
	"-W",
] }
docs-build = { cmd = [
	"sphinx-build",
	"-M",
	"html",
	"docs",
	"docs/_build",
	"-W",
], depends-on = [
	"doctest",
] }
docs-build-notest = { cmd = [
	"sphinx-build",
	"-M",
	"html",
	"docs",
	"docs/_build",
] }
docs = { depends-on = ["docs-build"] } # alias
doc = { depends-on = ["docs-build"] } # alias
serve = { cmd = ["python", "-m", "http.server", "-d", "docs/_build/html"] }
generate-sbom = { cmd = [
	"sbom4python",
	"--module",
	"hydromt",
	"--output-file",
	"hydromt-core-sbom.json",
	"--sbom",
	"spdx",
	"--format",
	"json",
] }

[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest"] }
test-lf = { cmd = ["pytest", "--lf", "--tb=short"] }
test-err-warn = { cmd = ["pytest", "--tb=short", "-W", "error"] }
test-cov = { cmd = [
	"pytest",
	"--verbose",
	"--cov=hydromt",
	"--cov-report=xml",
	"--cov-branch",
] }

[tool.pixi.feature.dev.tasks]
install = { depends-on = ["install-pre-commit"] }
install-pre-commit = "pre-commit install"
lint = { cmd = ["pre-commit", "run", "--all"] }
mypy = "mypy ."

pypi = { depends-on = [
	"pypi-git-clean",
	"pypi-git-restore",
	"pypi-flit-build",
	"pypi-twine",
] }
pypi-git-clean = { cmd = ["git", "clean", "-xdf"] }
pypi-git-resore = { cmd = ["git", "restore", "-SW", "."] }
pypi-flit-build = { cmd = ["flit", "build"] }
pypi-twine = { cmd = ["python", "-m", "twine", "check", "dist/*"] }

# clean
clean = { depends-on = [
	"clean-dist",
	"clean-docs-generated",
	"clean-docs-build",
	"clean-docs-examples",
] }
clean-dist = { cmd = ["rm", "-rf", "dist"] }
clean-docs-generated = { cmd = ["rm", "-rf", "docs/_generated"] }
clean-docs-build = { cmd = ["rm", "-rf", "docs/_build"] }
clean-docs-examples = { cmd = ["rm", "-rf", "docs/examples"] }

[tool.pixi.environments]
default = { features = [
	"py314",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
], solve-group = "py314" }

binder = { features = [
	"py313",
	"io",
	"vrt",
	"extra",
	"examples",
], solve-group = "py313" } # cannot do 3.14 yet, cartopy does not provide wheels for 3.14 yet.

full-py314 = { features = [
	"py314",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
], solve-group = "py314" }
low-py314 = { features = [
	"lowest-deps",
	"py314",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
] }
min-py314 = { features = ["py314", "test"], solve-group = "py314" }
full-py313 = { features = [
	"py313",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
], solve-group = "py313" }
low-py313 = { features = [
	"lowest-deps",
	"py313",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
] }
min-py313 = { features = ["py313", "test"], solve-group = "py313" }

full-py312 = { features = [
	"py312",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
], solve-group = "py312" }
low-py312 = { features = [
	"lowest-deps",
	"py312",
	"io",
	"vrt",
	"extra",
	"dev",
	"test",
	"doc",
	"examples",
] }
min-py312 = { features = ["py312", "test"], solve-group = "py312" }

# pypi does not have these binary wheels for osx-arm64
[tool.pixi.target.osx-arm64.dependencies]
netcdf4 = "*"
rasterio = ">=1.4.4,<1.5"
libgdal-hdf5 = ">=3.12.1,<4"
libgdal-netcdf = ">=3.12.1,<4"
