[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt"
authors = [
	{ name = "Dirk Eilander", email = "dirk.eilander@deltares.nl" },
	{ name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl" },
	{ name = "Sam Vente", email = "sam.vente@deltares.nl" },
]
dependencies = [
	"aiohttp>=3.10,<4",        # async http client
	"affine>=2.4",             # Spatial rasterers affine transformations (bbox pixel coalision)
	"bottleneck>=1.4",         # Spearmen rank computation
	"click>=8.2",              # CLI configuration
	"dask>=2024",              # lazy computing
	"fsspec[http]>=2025",      # general file systems utilities
	"geopandas[all]>=1.0",     # pandas but geo, wraps fiona and shapely
	"importlib_metadata>=8.0", # entrypoints backport
	"mercantile>=1.0",         # tile handling
	"netcdf4>=1.7",            # netcfd IO
	"numba>=0.59.0",           # speed up computations (used in e.g. stats)
	"numpy>=2.0",              # pin necessary to ensure compatability with C headers
	"packaging>=25.0",         # compare versions of hydromt
	"pandas>=2.3,<4",          # Dataframes
	"pooch>=1.8",              # data fetching
	"pyarrow>=17.0",           # Apache Arrow bindings
	"pydantic>=2.11",          # Validation
	"pydantic-settings>=2.8",  # Settings Management
	"pyflwdir>=0.5.10",        # Height models and derivatives
	"pyogrio>=0.10",           # io for geopandas dataframes
	"pyproj>=3.7",             # projections for Coordinate reference systems
	"pystac>=1.11",            # STAC integration
	"pyyaml>=6.0.2",           # yaml interface (6.0.2 adds py3.13 wheels, older builds fail)
	"rasterio>=1.4",           # raster wrapper around gdal
	"requests>=2.32.2",        # donwload stuff
	"rioxarray>=0.18",         # wraps rasterio and xarray. Almost superceded by hydromt/raster.py
	"scipy>=1.14",             # scientific utilities
	"shapely>=2.1.2",          # geometry transforms
	"tenacity>=9.1",           # general-purpose retrying library
	"tomli>=2.0",              # parsing toml files
	"tomli-w>=1.0",            # writing toml files
	"universal_pathlib>=0.2",  # provides path compatability between different filesystems
	"xarray>=2025.06",         # ndim data arrays
	"xmltodict>=1.0",          # xml parser also used to read VRT
	"xugrid>=0.15.1",          # xarray wrapper for mesh processing
	"zarr>=3.1,<4",            # zarr
]

requires-python = ">=3.11,<3.15"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Hydrology",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
io = [
	"azure-ai-ml>=1.22",    # AzureML datastore URI resolution
	"azure-identity>=1.16", # Azure credential chain (DefaultAzureCredential)
	"adlfs>=2024",          # Azure Data Lake / Blob Storage file system
	"gcsfs>=2023.12.1",     # google cloud file system
	"fastparquet>=2024",    # parquet IO
	"openpyxl>=3.1.3",      # excel IO
	"pillow>=11.0",         # image IO
	"s3fs>=2024",           # S3 file system
]
vrt = [
	"gdal>=3.5.0", # vrt for caching of mosaic raster
]
extra = [
	"matplotlib>=3.0", # plotting; required for slippy tiles
	"pyet>=1.3",       # calc evapotranspiration, quite well used, used in all wflow models but domain specific
]
test = [
	"pytest>=9.0.3",       # testing framework
	"pytest-cov>=6.0",     # test coverage
	"pytest-mock>=3.13",   # mocking
	"pytest-timeout>=2.4", # darn hanging tests
]
examples = [
	"cartopy>=0.23",   # plotting examples
	"jupyterlab>=4.3", # run examples in jupyter notebook
	"notebook>=7.4",   # jupyter integration
]
slim = ["hydromt[io,extra,examples]"]

[project.urls]
Documentation = "https://deltares.github.io/hydromt"
Source = "https://github.com/Deltares/hydromt"

[project.scripts]
hydromt = "hydromt.cli.main:main"

[project.entry-points."hydromt.components"]
core = "hydromt.model.components"

[project.entry-points."hydromt.drivers"]
core = "hydromt.data_catalog.drivers"

[project.entry-points."hydromt.models"]
core = "hydromt.model"

[project.entry-points."hydromt.catalogs"]
core = "hydromt.data_catalog.predefined_catalog"

[project.entry-points."hydromt.uri_resolvers"]
core = "hydromt.data_catalog.uri_resolvers"

[tool.setuptools.dynamic]
description = { file = "hydromt/__init__.py" }

[tool.ruff]
line-length = 88
target-version = "py311"                        # keep as the lowest for backwards compatible changes.
exclude = ["docs", "hydromt/model/__init__.py"]

[tool.ruff.lint]
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
select = ["E", "F", "I", "PT", "D", "B", "ICN", "TID"]
ignore = ["D211", "D213", "D206", "E501", "E741", "D105", "E712", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"hydromt/__init__.py" = ["E402", "F401", "F403"]
"hydromt/models/__init__.py" = ["F401"]
"hydromt/_compat.py" = ["F401"]
"tests/conftest.py" = ["E402"]
"examples/**" = ["B018", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["hydromt"]
exclude = ["docs", "examples", "envs", "tests", "binder", ".github"]

[tool.pytest.ini_options]
addopts = ["--ff", "-m", "not manual"]
testpaths = ["tests"]
markers = [
	"integration: marks tests as being integration tests",
	"manual: marks tests as manual, to be run before release",
]

filterwarnings = [
	"error",
	"ignore:numpy.ndarray size changed:RuntimeWarning",
	# "ignore::rasterio.errors.NotGeoreferencedWarning",                              # upstream issue with rasterio, see https://github.com/rasterio/rasterio/issues/2497
	"ignore:Detected a customized `__new__` method in subclass:DeprecationWarning", #upstream error in universal_pathlib see https://github.com/fsspec/universal_pathlib?tab=readme-ov-file#migrating-to-v020
	"ignore::ResourceWarning",                                                      # upstream issue with aiohttp, can remove once aiohttp 4.0 is stable: https://github.com/aio-libs/aiohttp/issues/5426
	"ignore::pytest.PytestUnraisableExceptionWarning",                              # combine with the above: https://github.com/pytest-dev/pytest/issues/9825
	'ignore:pathlib\.Path\.__enter__:DeprecationWarning',                           # xugrid in python 3.11
	#   "ignore:Implicit None on return values is deprecated and will raise KeyErrors:DeprecationWarning"
	"ignore:__array_wrap__ must accept context and return_scalar arguments \\(positionally\\) in the future:DeprecationWarning",
	'ignore:Python 3.14 will, by default, filter extracted tar archives:DeprecationWarning',                                                                                                                                                           # pooch tarfile in python 3.12
	"ignore:'mode' parameter is deprecated and will be removed in Pillow 13:DeprecationWarning",                                                                                                                                                       # Pillow 13
	"ignore:The 'shapely\\.geos' module is deprecated, and will be removed in a future version. All attributes of 'shapely\\.geos' are available directly from the top-level 'shapely' namespace \\(since shapely 2\\.0\\.0\\)\\.:DeprecationWarning", # shapely 2.1.2
	"ignore:'parseString' deprecated \\- use 'parse_string':pyparsing.warnings.PyparsingDeprecationWarning",
	"ignore:'oneOf' deprecated \\- use 'one_of':pyparsing.warnings.PyparsingDeprecationWarning",
	"ignore:'asyncio\\.get_event_loop_policy' is deprecated and slated for removal in Python 3\\.16:DeprecationWarning",

	# numpy itself silences these
	# https://github.com/numpy/numpy/blob/46268caa719db95ab2198bcd619f0e3120d7c52e/numpy/__init__.py#L704-L707
	"ignore:numpy.ndarray size changed:RuntimeWarning",

	# zarr v3 experimental warning
	"ignore:Consolidated metadata is currently not part in the Zarr format 3 specification:UserWarning",
	# irrelevant radolan engine warning
	"ignore:Engine 'radolan' loading failed.*:RuntimeWarning",

	# macos specific, see https://github.com/shapely/shapely/issues/2215
	"ignore:divide by zero encountered in oriented_envelope:RuntimeWarning:shapely",
	"ignore:invalid value encountered in oriented_envelope:RuntimeWarning:shapely",

]

[tool.mypy]
# TODO: Re-enable the tests
exclude = ["docs/.*", "tests/.*"]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
python_version = "3.14"
ignore_missing_imports = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
